<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asana of Things</string>
    <string name="adna_app_id">MIICXAIBAAKBgQCqGKukO1De7zhZj6+H</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="facebook_app_id">2108961359195952</string>
    <string name="mypages_menu1">My Stickers</string>
    <string name="mypages_menu2">Add\10Stickers</string>
    <string name="mypages_menu3">Scan\10Link</string>
    <string name="server_address">http://api.adna-anoto.com:60112</string>
    <string name="txt_about_description">Anoto DNA (ADNA) makes it possible to uniquely and unobtrusively code objects that can then be easily identified using ubiquitous mobile devices. This translates into lots of exciting possibilities for product innovation, marketing insights, and supply-chain control.</string>
    <string name="txt_add_purchase_stickers">Add Purchase Stickers</string>
    <string name="txt_add_sticker">ADD\10stickers</string>
    <string name="txt_add_stickers">Add Stickers</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_copyright">All Rights Reserved.\10copyright ⓒ 2018 by ANOTO</string>
    <string name="txt_create_account">Create New Account</string>
    <string name="txt_create_account_ok">Your verification email has been sent.\10Please check your email.</string>
    <string name="txt_create_new_account">Create New Account</string>
    <string name="txt_date">Date</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_dont_show">Got it! No need to show this again.</string>
    <string name="txt_empty_url">Empty Url</string>
    <string name="txt_exit">Press \'back\' button again to exit the app.</string>
    <string name="txt_expiration">Expiration</string>
    <string name="txt_expiration_date">Expiration date</string>
    <string name="txt_hint_input_id">Please enter email address</string>
    <string name="txt_hint_input_pwd">Please enter password</string>
    <string name="txt_hint_input_pwd2">Please confirm password</string>
    <string name="txt_hint_input_title">Please enter a sticker title</string>
    <string name="txt_hint_input_url">http:// or https://</string>
    <string name="txt_history">History</string>
    <string name="txt_history_delete_all">Are you sure you want to delete all records?</string>
    <string name="txt_history_delete_item">Are you sure you want to delete this record?</string>
    <string name="txt_img_save_cannot">Can\'t save image.</string>
    <string name="txt_img_save_fail">Failed to save the image.</string>
    <string name="txt_img_save_success">Successfully save image.</string>
    <string name="txt_index">Index</string>
    <string name="txt_later">Later</string>
    <string name="txt_link_copy">Copy Link</string>
    <string name="txt_link_copy_fail">Failed to copy link.</string>
    <string name="txt_link_copy_successful">Link copy successful.</string>
    <string name="txt_link_type">Link Type</string>
    <string name="txt_link_url">Link Url</string>
    <string name="txt_linked">Linked</string>
    <string name="txt_loading">Loading...\10Please wait...</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_msg">Available after logging in.</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_manual_link">LINK\10manual</string>
    <string name="txt_msg_already_account">This account is already registered.</string>
    <string name="txt_msg_create_account">A confirmation email will be sent.</string>
    <string name="txt_msg_expiration_date_false">Invalid Expiration date information. Please re-enter Expiration date</string>
    <string name="txt_msg_input_link_url">Please enter link url.</string>
    <string name="txt_msg_invalid_pwd">Use alphanumeric characters, special characters and the length should be between 8-20 characters.</string>
    <string name="txt_msg_logout">Are you sure you want to log out?</string>
    <string name="txt_msg_logout_ok">You have been logged out.</string>
    <string name="txt_msg_no_reg_link">No selected or already registed. Please select correctly.</string>
    <string name="txt_msg_not_match_pwd">Password does not match.</string>
    <string name="txt_msg_reg_link">Do you want to register the link to the sticker?</string>
    <string name="txt_msg_scan_unregistered_sticker">Unregistered sticker.\10Do you want to register as My Sticker?</string>
    <string name="txt_mypages">My Pages</string>
    <string name="txt_network_disconnected">The network is not connected\10Check the network status.</string>
    <string name="txt_no">NO</string>
    <string name="txt_no_link_data">No Link!! No Data!!!</string>
    <string name="txt_none">None</string>
    <string name="txt_not_valid_email">Not a valid email type.</string>
    <string name="txt_ok">OK</string>
    <string name="txt_page_address">Page Address</string>
    <string name="txt_permission_msg">You need to enable all permissions to use the application.</string>
    <string name="txt_permission_title">Permission required</string>
    <string name="txt_proceed">Proceed</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_registered">Registered.</string>
    <string name="txt_registration">Registration</string>
    <string name="txt_scan">Scan</string>
    <string name="txt_scan_invalid_sticker">Invalid sticker.</string>
    <string name="txt_scan_link">LINK\10scan</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_signup_account_ok">User registered.</string>
    <string name="txt_singup">SING UP</string>
    <string name="txt_singup_msg">For using ADNA Sticker,\10you should register your account.</string>
    <string name="txt_sticker_title">Title</string>
    <string name="txt_stickers_link_registration">Link Registration</string>
    <string name="txt_update">Update</string>
    <string name="txt_user_account_login">User Account Login</string>
    <string name="txt_version_latest">The latest version.</string>
    <string name="txt_version_update">There is a new version.\10Do you want to update your app?</string>
    <string name="txt_version_update_force">There is a new version.\10Please update your app for better use.</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="ERROR_SOCKET">Socket timeout!</string>
    <string name="ERROR_INTERNET">No internet available!</string>
    <string name="ERROR_SOMETHING_WENT_WRONG">Something went wrong</string>
    <string name="default_notification_channel_id">my_channel_4601</string>
    <string name="default_notification_channel_id_2">my_channel_4602</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="more">more ></string>
    <string name="about_title">About Feasycom</string>
    <string name="company">Company</string>
    <string name="company_name">Shenzhen Feasycom Technology Co.,Ltd</string>
    <string name="tel_number">+86-0755-23062695</string>
    <string name="tel">Tel</string>
    <string name="web">Web</string>
    <string name="web_url">www.feasycom.com</string>
    <string name="mail">E-mail</string>
    <string name="mail_addr">support@feasycom.com</string>
    <string name="Facebook">Facebook</string>
    <string name="FaceBook_addr">Feasycom</string>
    <string name="appVersion">Version</string>
    <string name="back">&#60; Back</string>
    <string name="save">Save</string>
    <string name="parameter_setting_title">Parameter Setting</string>
    <string name="update">Update </string>
    <string name="add_beacon_title">Add Beacon</string>
    <string name="add_beacon_right">Finish</string>
    <string name="hint_input_PIN"></string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="not_updated_yet">Do not updated yet</string>
    <string name="updated_at">Updated at %1$s</string>
    <string name="updated_just_now">Updated just now</string>
    <string name="time_error">Time error</string>
    <string name="version_name">3.1.5</string>
    <string name="version_update">Get the newest version</string>
    <string name="otaFile">File: </string>
    <string name="spreadsheet_1">This button opens the Manage Spreadsheet screen.</string>
    <string name="spreadsheet_2">1. First time user will need to choose a google account for saving and retrieving spreadsheets in google drive.</string>
    <string name="spreadsheet_3">"2 (a). System will show all spreadsheets created using app when user is logged in using a google account.
        \n(b). A spreadsheet can be created in root folder or inside specific folder.
   \n(c). A spreadsheet can be set as default for writing QR data and Beacon data by clicking on Star Icon."</string>
    <string name="spreadsheet_add">"3. A new spreadsheet can be created using '+' icon in the bottom right corner of this screen."</string>
    <string name="spreadsheet_delete">4. A spreadsheet can be deleted by clicking on three vertical dots icon available in right side of spreadsheet name.</string>
    <string name="default_spreadsheet">5. Default spreadsheet (Spreadsheet for saving QR and Beacon data) name will be shown on top right corner of the screen. Clicking on which a pop-up will be shown that will show the path of default spreadsheet in google drive </string>
    <string name="spreadsheet_6">"6(a). Spreadsheet data can be checked by clicking on a spreadsheet icon from list.
   \n(b). A spreadsheet has two sheets- 'QR Sheet' for writing QR data and  'Bluetooth Sheet' for writing beacons data."</string>
    <string name="spreadsheet_7">7. On clicking in a cell, its data preview can be seen in bottom bar. </string>
    <string name="spreadsheet_8">8. QR data uploading process can be resumed by clicking in status column of a QR data in QR sheet page of spreadsheet viewer. </string>
    <string name="spreadsheet_9">9. When QR data uploading process will be started, it will be notified by a message. </string>
    <string name="drive_1">This button opens the Manage Drive screen.</string>
    <string name="drive_2">1. First time user will need to choose a google account for saving and retrieving photos in a google drive folder.</string>
    <string name="drive_3">2. First time user will also need to allow permission for managing files and folders on google drive.</string>
    <string name="drive_4">"3(a). System will show all folders created using app when user is logged in using a google account.
    \n(b). A folder can be set as default folder for saving QR photos by clicking on Star Icon available on folder icon."</string>
    <string name="drive_8">"4. Default folder (Google drive folder for  QR photo) name will be shown on top right corner of the screen. Clicking on which a pop-up will be shown that will show the path of default spreadsheet in google drive </string>
    <string name="drive_5">"5. A new folder can be created using '+' icon in the bottom right corner of this screen."</string>
    <string name="drive_folder_delete">6. A folder/photo can be deleted by clicking on three vertical dots icon available in right side of folder/photo title.</string>
    <string name="drive_6">7. System will show all QR photos saved in a folder by clicking on folder icon.</string>
    <string name="drive_7">8. Full size preview of a QR photo can be viewed by clicking on a QR photo.</string>
</resources>