<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="250dp" android:layout_height="wrap_content">
    <TextView android:textSize="16sp" android:textColor="#8a000000" android:gravity="center" android:id="@+id/txt_dialog_msg" android:layout_width="250dp" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="18dp" android:layout_marginRight="15dp" android:layout_marginBottom="21dp"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="52dp">
        <Button android:textSize="14sp" android:textStyle="normal" android:textColor="@color/black3" android:id="@+id/btn_cancel" android:background="@color/white" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/txt_cancel" android:layout_weight="1" android:textAllCaps="false" android:fontFamily="sans-serif-medium"/>
        <Button android:textSize="14sp" android:textStyle="normal" android:textColor="@color/black3" android:id="@+id/btn_delete" android:background="@color/white" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/txt_delete" android:layout_weight="1" android:textAllCaps="false" android:fontFamily="sans-serif-medium"/>
        <Button android:textSize="14sp" android:textStyle="normal" android:textColor="@color/black3" android:id="@+id/btn_link_copy" android:background="@color/white" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/txt_link_copy" android:layout_weight="1" android:textAllCaps="false" android:fontFamily="sans-serif-medium"/>
    </LinearLayout>
</LinearLayout>
